# salesbench

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  envhub.yaml  pyproject.toml
.cursor/plans/: simple_benchmark_architecture_09e4eb14.plan.md
environments/salesbench/: __init__.py  environment.py
environments/salesbench/agents/: __init__.py  buyer_llm.py  seller_base.py  seller_llm.py
environments/salesbench/cli/: __init__.py  main.py
environments/salesbench/context/: __init__.py  buffers.py  manager.py  policies.py  serializers.py
environments/salesbench/context/compaction/: __init__.py  base.py  key_events.py  simple_summary.py
environments/salesbench/core/: __init__.py  config.py  errors.py  protocol.py  types.py
environments/salesbench/envs/sales_mvp/: __init__.py  env.py  metrics.py  offers.py  personas.py  pricing.py  products.py  random_events.py  state.py
environments/salesbench/envs/sales_mvp/tools/: __init__.py  calendar.py  calling.py  crm.py  products.py
environments/salesbench/envs/sales_mvp/verifiers/: __init__.py  scoring.py
environments/salesbench/events/: __init__.py  aggregators.py  event_log.py  event_types.py
environments/salesbench/llm/: __init__.py  client.py
environments/salesbench/metrics/: __init__.py  collectors.py  hooks.py  pass_at_k.py
environments/salesbench/orchestrator/: __init__.py  budgets.py  orchestrator.py  termination.py
environments/salesbench/storage/: __init__.py  supabase_writer.py
environments/salesbench/telemetry/: __init__.py  otel.py  spans.py
salesbench/: __init__.py  __main__.py  environment.py  models.py
salesbench/agents/: __init__.py  buyer_llm.py  providers.py  seller_base.py  seller_heuristic.py  seller_llm.py
salesbench/cli/: arguments.py  formatting.py  main.py  telemetry_utils.py
salesbench/cli/commands/: __init__.py  inspect.py  leaderboard.py  run_benchmark.py  run_episode.py
salesbench/context/: __init__.py  anchored_state.py  buffers.py  compaction.py  episode.py  manager.py  policies.py  serializers.py
salesbench/context/compaction/: __init__.py  base.py  key_events.py  simple_summary.py
salesbench/core/: __init__.py  config.py  errors.py  protocol.py  types.py
salesbench/domains/: __init__.py  base.py  registry.py
salesbench/domains/insurance/: __init__.py
salesbench/envs/: __init__.py
salesbench/envs/sales_mvp/: __init__.py  env.py  metrics.py  offers.py  personas.py  pricing.py  products.py  random_events.py  state.py
salesbench/envs/sales_mvp/tools/: __init__.py  calendar.py  calling.py  crm.py  products.py
salesbench/envs/sales_mvp/verifiers/: __init__.py  scoring.py  server.py
salesbench/events/: __init__.py  aggregators.py  event_log.py  event_types.py
salesbench/llm/: __init__.py  client.py
salesbench/metrics/: __init__.py  collectors.py  hooks.py  pass_at_k.py
salesbench/orchestrator/: __init__.py  budgets.py  orchestrator.py  termination.py
salesbench/runner/: __init__.py  config.py  executor.py  integrations.py  results.py  runner.py
salesbench/storage/: __init__.py  json_writer.py  schema.sql  supabase_writer.py
salesbench/telemetry/: __init__.py  otel.py  spans.py
salesbench/ui/: __init__.py  app.py
salesbench_prime_rl_harness/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
salesbench_prime_rl_harness/salesbench_prime_rl/: __init__.py  catalog.py  dataset.py  environment.py  generator.py  policy.py  rewards.py  runtime.py  tools.py
scripts/: test_grafana.py  validate_e2e.py
scripts/database/: 001_create_tables.sql  002_sample_queries.sql
tests/: __init__.py  conftest.py  test_conversation_regressions.py  test_integration.py  test_personas.py  test_products.py  test_scoring.py  test_tools.py
verifiers/: __init__.py
