[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesbench"
version = "0.1.0"
description = "AI Social Intelligence Benchmark for Life Insurance Cold-Calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SalesBench Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "salesbench[llm,dev]",
]

[project.scripts]
salesbench = "salesbench.cli.main:main"

[project.urls]
Homepage = "https://github.com/salesbench/salesbench"
Documentation = "https://github.com/salesbench/salesbench#readme"
Repository = "https://github.com/salesbench/salesbench"

[tool.hatch.build.targets.wheel]
packages = ["environments/salesbench"]

[tool.hatch.build.targets.wheel.sources]
"environments" = ""

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["environments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
