[project]
name = "salesbench-prime-rl"
description = "Production-ready sales pipeline environment for Prime Intellect verifiers + hosted RL"
tags = ["sales", "stateful-tools", "rl", "training", "evaluation"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "python-dotenv>=1.0.0",
    "verifiers>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["salesbench_prime_rl"]

[tool.hatch.build.targets.sdist]
include = [
    "salesbench_prime_rl",
    "README.md",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 8
rollouts_per_example = 1
